Partial dynamic-access coverage for org.jboss.logmanager.formatters.Formatters$11 (4/5)